--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.26.6",
     "electron-updater": "^6.3.9",
     "react-antd": "^1.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "redux-toolkit": "^1.1.2",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
